@@ -1,6 +1,7 @@
 Current Version: @VERSION@
 
 ctags-@VERSION@ (@DATE@)
+* Fixed an endless loop with comments in triple strings [Python, Bug #1988027].
 * Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].
 * Added support for VHDL [VHDL, Bug #1943306].
 * Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
